Fix for Maven Surefire plugin